k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: platform-audit-service
  namespace: platform
spec:
  parentRefs:
  - kind: Gateway
    name: gateway-internal
    namespace: gateway
  hostnames:
  - audit.tuxgrid.com
  rules:
  - backendRefs:
    - name: platform-audit-service
      port: 8080
